--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -2,7 +2,8 @@ name: "Update Editor's Copy"
 
 on:
   push:
-  branches: [ master ]
+  branches:
+  - master
     paths-ignore:
     - README.md
     - CONTRIBUTING.md
